--- a/ssf/build.properties
+++ b/ssf/build.properties
@@ -70,3 +70,11 @@ jspclasses.dir=jspclasses
 
 libraries.current=activation.jar,activemq.jar,addressing.jar,antlr.jar,aopalliance.jar,axis.jar,axis-ant.jar,axis-jaxrpc.jar,axis-saaj.jar,bcprov-jdk13-128.jar,bsh.jar,castor.jar,cglib.jar,commons-beanutils.jar,commons-codec.jar,commons-collections.jar,commons-dbcp.jar,commons-digester.jar,commons-discovery.jar,commons-email.jar,commons-fileupload.jar,commons-httpclient.jar,commons-lang.jar,commons-logging.jar,commons-pool.jar,commons-validator.jar,concurrent.jar,displaytag.jar,dom4j.jar,ehcache.jar,export.jar,friki.jar,gif89.jar,google.jar,hibernate3.jar,httpbridge.jar,icq.jar,informa.jar,j2ee-management.jar,jaim.jar,jakarta-slide-webdavlib.jar,jazzy.jar,jaxen.jar,jaxrpc.jar,jbpm.jar,jbpm-identity.jar,jcaptcha.jar,jcommon.jar,jcvs.jar,jdom.jar,jfreechart.jar,jgroups.jar,jstl.jar,jstl-impl.jar,log4j.jar,lucene.jar,md5crypt.jar,msnm.jar,nfc-server.jar,odmg.jar,oro.jar,oscache.jar,pdfbox.jar,opensaml.jar,poi.jar,poi-contrib.jar,poi-scratchpad.jar,portlet.jar,projectb.jar,quartz.jar,saaj.jar,soap.jar,spring.jar,spring-portlet.jar,struts.jar,struts-legacy.jar,stxx.jar,trove.jar,velocity.jar,wbmp.jar,wsdl4j.jar,wss4j.jar,xerces.jar,xmlrpc.jar,xmlsec.jar,ym.jar
 libraries.old=cglib-asm.jar,cos.jar,jaxm.jar,struts-legacy.jar,wsrp4j-consumer.jar,wsrp4j-producer.jar,wsrp4j-shared.jar
+
+##
+## Liferay kits
+##
+
+#liferay.tomcat.zip.file.name=liferay-portal-tomcat-jdk5-4.0.0rc2.zip
+liferay.tomcat.zip.file.name=liferay-portal-pro-3.6.1-tomcat.zip
+liferay.jboss-tomcat.zip.file.name=liferay-portal-ent-3.6.1-jboss-tomcat.zip
