--- a/ssf/ssfs/resources/slide-src/wck/build.properties.sample
+++ b/ssf/ssfs/resources/slide-src/wck/build.properties.sample
@@ -55,7 +55,7 @@ slide.base.dir=..
 #slide.lib.dir=${slide.base.dir}/dist/slide/lib
 #slide.version=2.2pre1
 supports.macro.store
-commons.transaction.version=1.1b2
+commons.transaction.version=1.1.1pre1
 
 # ----- Catalina distribution directory -----
 # add the location of your catalina distribution here to make the
