Add support for building Slide (to build ssfs.war) with our custom changes, etc.

--- a/ssf/build.properties
+++ b/ssf/build.properties
@@ -78,3 +78,8 @@ libraries.old=cglib-asm.jar,cos.jar,jaxm.jar,struts-legacy.jar,wsrp4j-consumer.j
 #liferay.tomcat.zip.file.name=liferay-portal-tomcat-jdk5-4.0.0rc2.zip
 liferay.tomcat.zip.file.name=liferay-portal-pro-3.6.1-tomcat.zip
 liferay.jboss-tomcat.zip.file.name=liferay-portal-ent-3.6.1-jboss-tomcat.zip
+
+##
+## Slide kits
+##
+slide.src.zip.file.name=slide-src-head_060506.zip
