--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -75,6 +75,21 @@ icons.profileList=/icons/profile_list.png
 icons.entry=/icons/page.png, /icons/table.png, /icons/script.png, /icons/vcard.png, /icons/note_edit.png, /icons/lightning.png, /icons/chart_bar.png, /icons/chart_curve.png, /icons/chart_pie.png
 
 ##
+## Dashboard components
+## Define the dashboard components and the jsps needed to view and configure them.
+##
+dashboard.components.wide=folder, search
+dashboard.components.narrowFixed=
+dashboard.components.narrowVariable=
+
+dashboard.size.narrowFixedWidth=250
+
+dashboard.viewJsp.folder=dashboard/folder_view
+dashboard.configJsp.folder=dashboard/folder_config
+dashboard.viewJsp.search=dashboard/search_view
+dashboard.configJsp.search=dashboard/search_config
+
+##
 ## File extensions that support edit-in-place via WebDAV
 ##
 edit.in.place.file.extensions=.doc,.ppt,.xsl
