--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -74,20 +74,52 @@ icons.folder=/icons/folder.png, /icons/disc_folder1.png, /icons/disc_folder2.png
 icons.profileList=/icons/profile_list.png
 icons.entry=/icons/page.png, /icons/table.png, /icons/script.png, /icons/vcard.png, /icons/note_edit.png, /icons/lightning.png, /icons/chart_bar.png, /icons/chart_curve.png, /icons/chart_pie.png
 
+# The following variables can be set by customers. 
+# Values found in these variables will be appended to the factory default lists above.
+# Put the new values in ssf-ext.properties (instead of editing this file).
+custom.icons.workspace=
+custom.icons.folder=
+custom.icons.profileList=
+custom.icons.entry=
+
 ##
 ## Dashboard components
 ## Define the dashboard components and the jsps needed to view and configure them.
 ##
-dashboard.components.wide=folder, search
-dashboard.components.narrowFixed=
-dashboard.components.narrowVariable=
+dashboard.components.wide=folder, search, html, iframe
+dashboard.components.narrowFixed=html, iframe
+dashboard.components.narrowVariable=favorites, html, iframe
 
+# The following variables can be set by customers. 
+# Values found in these variables will be appended to the factory default lists above.
+# Put the new values in ssf-ext.properties (instead of editing this file).
+custom.dashboard.components.wide=folder, search, html, iframe
+custom.dashboard.components.narrowFixed=html, iframe
+custom.dashboard.components.narrowVariable=favorites, html, iframe
+
+# Dashboard width for the "narrow fixed" region
 dashboard.size.narrowFixedWidth=250
 
+# Dashboard components
 dashboard.viewJsp.folder=dashboard/folder_view
 dashboard.configJsp.folder=dashboard/folder_config
+dashboard.title.folder=__dashboard.folder
+
 dashboard.viewJsp.search=dashboard/search_view
 dashboard.configJsp.search=dashboard/search_config
+dashboard.title.search=__dashboard.search
+
+dashboard.viewJsp.favorites=dashboard/favorites_view
+dashboard.configJsp.favorites=dashboard/favorites_config
+dashboard.title.favorites=__dashboard.favorites
+
+dashboard.viewJsp.html=dashboard/html_view
+dashboard.configJsp.html=dashboard/html_config
+dashboard.title.html=__dashboard.html
+
+dashboard.viewJsp.iframe=dashboard/iframe_view
+dashboard.configJsp.iframe=dashboard/iframe_config
+dashboard.title.iframe=__dashboard.iframe
 
 ##
 ## File extensions that support edit-in-place via WebDAV
