--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -86,9 +86,9 @@ custom.icons.entry=
 ## Dashboard components
 ## Define the dashboard components and the jsps needed to view and configure them.
 ##
-dashboard.components.wide=folder, search, html, iframe
-dashboard.components.narrowFixed=html, iframe
-dashboard.components.narrowVariable=favorites, html, iframe
+dashboard.components.wide=folder, search, workspaceTree, html, iframe
+dashboard.components.narrowFixed=workspaceTree, html, iframe
+dashboard.components.narrowVariable=workspaceTree, favorites, html, iframe
 
 # The following variables can be set by customers. 
 # Values found in these variables will be appended to the factory default lists above.
@@ -101,24 +101,28 @@ custom.dashboard.components.narrowVariable=favorites, html, iframe
 dashboard.size.narrowFixedWidth=250
 
 # Dashboard components
-dashboard.viewJsp.folder=dashboard/folder_view
-dashboard.configJsp.folder=dashboard/folder_config
+dashboard.viewJsp.workspaceTree=/WEB-INF/jsp/dashboard/workspace_tree_view.jsp
+dashboard.configJsp.workspaceTree=/WEB-INF/jsp/dashboard/workspace_tree_config.jsp
+dashboard.title.workspaceTree=__dashboard.workspaceTree
+
+dashboard.viewJsp.folder=/WEB-INF/jsp/dashboard/folder_view.jsp
+dashboard.configJsp.folder=/WEB-INF/jsp/dashboard/folder_config.jsp
 dashboard.title.folder=__dashboard.folder
 
-dashboard.viewJsp.search=dashboard/search_view
-dashboard.configJsp.search=dashboard/search_config
+dashboard.viewJsp.search=/WEB-INF/jsp/dashboard/search_view.jsp
+dashboard.configJsp.search=/WEB-INF/jsp/dashboard/search_config.jsp
 dashboard.title.search=__dashboard.search
 
-dashboard.viewJsp.favorites=dashboard/favorites_view
-dashboard.configJsp.favorites=dashboard/favorites_config
+dashboard.viewJsp.favorites=/WEB-INF/jsp/dashboard/favorites_view.jsp
+dashboard.configJsp.favorites=/WEB-INF/jsp/dashboard/favorites_config.jsp
 dashboard.title.favorites=__dashboard.favorites
 
-dashboard.viewJsp.html=dashboard/html_view
-dashboard.configJsp.html=dashboard/html_config
+dashboard.viewJsp.html=/WEB-INF/jsp/dashboard/html_view.jsp
+dashboard.configJsp.html=/WEB-INF/jsp/dashboard/html_config.jsp
 dashboard.title.html=__dashboard.html
 
-dashboard.viewJsp.iframe=dashboard/iframe_view
-dashboard.configJsp.iframe=dashboard/iframe_config
+dashboard.viewJsp.iframe=/WEB-INF/jsp/dashboard/iframe_view.jsp
+dashboard.configJsp.iframe=/WEB-INF/jsp/dashboard/iframe_config.jsp
 dashboard.title.iframe=__dashboard.iframe
 
 ##
