--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -26,22 +26,15 @@ ssf.port=8080
 # The SSL port number on the host (optional) - If unspecified, defaults to 443
 ssf.secure.port=8443
 
-
 # Web context root for SSFS (optional) - If unspecified, defaults to /ssfs.
 # SSFS web app shares the same host name and port number as SSF web app.
 ssfs.ctx=/ssfs
 
 ##
-## Repository services
+## Data directories
 ##
 
-# Default repository service
-# WARNING: Once system is deployed and populated with real data, NEVER change 
-# the value of this property. It may cause system to malfunction and unable to 
-# access existing file attachments.  
-default.repository.service=fileRepositoryService
-
-# Site-level root directory for data (used for storing lucene index and file attachments, etc.)
+# Site-level root directory for data (used for storing repositories and indexes, etc.)
 data.root.dir=/home/sitescape/
 
 # Site-level directory for temporary files
@@ -49,6 +42,17 @@ temp.dir=/home/sitescape/temp
 
 # Site-level directory for files that failed content filtering
 filtering.failed.dir=/home/sitescape/filteringfailed
+
+##
+## Repository services (general)
+## 
+
+# Default repository service
+# WARNING: Once system is deployed and populated with real data, NEVER change 
+# the value of this property. The system is not capable of migrating data
+# from old repository to new one transparently. Consequently changing this
+# value will cause system to malfunction and unable to find existing files. 
+default.repository.service=fileRepositoryService
 
 # Default width and height for generated thumbnails.
 thumbnail.max.width=100
