Changes to the order of file path elements

--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -59,6 +59,19 @@ thumbnail.max.width=100
 thumbnail.max.height=100
 
 ##
+## JCR
+##
+
+jcr.workspace.name=sitescape
+jcr.node.documentlibrary=documentlibrary
+
+jcr.jackrabbit.repository.root=/home/liferay/jackrabbit
+jcr.jackrabbit.config.file.path=${jcr.jackrabbit.repository.root}/repository.xml
+jcr.jackrabbit.repository.home=${jcr.jackrabbit.repository.root}/home
+jcr.jackrabbit.credentials.username=none
+jcr.jackrabbit.credentials.password=none
+
+##
 ## Web/Portal Authentication
 ##
 
