--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -35,7 +35,7 @@ ssfs.ctx=/ssfs
 ##
 
 # Site-level root directory for data (used for storing repositories and indexes, etc.)
-data.root.dir=/home/sitescape/
+data.root.dir=/home/sitescape
 
 # Site-level directory for temporary files
 temp.dir=/home/sitescape/temp
@@ -47,16 +47,30 @@ filtering.failed.dir=/home/sitescape/filteringfailed
 ## Repository services (general)
 ## 
 
-# Default repository service
+# Default repository
 # WARNING: Once system is deployed and populated with real data, NEVER change 
 # the value of this property. The system is not capable of migrating data
 # from old repository to new one transparently. Consequently changing this
 # value will cause system to malfunction and unable to find existing files. 
-default.repository.service=fileRepositoryService
+default.repository=fileRepositoryService
 
 # Default width and height for generated thumbnails.
 thumbnail.max.width=100
 thumbnail.max.height=100
+
+
+##
+## WebDAV repository
+##
+
+# Include scheme, hostname, and optional port number
+webdav.repository.hosturl=http://localhost:8080
+# Context root for the WebDAV server
+webdav.repository.context.path=/slide
+# Path to the document root relative to the context root
+webdav.repository.document.root.path=/files/sitescape/document/
+webdav.repository.username=root
+webdav.repository.password=root
 
 ##
 ## JCR
@@ -145,4 +159,23 @@ dashboard.title.iframe=__dashboard.iframe
 ##
 ## File extensions that support edit-in-place via WebDAV
 ##
+
 edit.in.place.file.extensions=.doc,.ppt,.xsl
+
+##
+## Presence service
+##
+
+presence.service.jabber.server=iic.homedns.org
+presence.service.jabber.server.port=5353
+presence.service.enable=true
+
+##
+## Presence broker
+##
+
+presence.broker.admin.id=admin
+presence.broker.admin.passwd=zonscape
+presence.broker.jabber.domain=iic.homedns.org
+presence.broker.default.community.id=sitescape
+presence.broker.zon.url=http://70.84.177.226:8000/imidio_api/
