--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -73,17 +73,23 @@ webdav.repository.username=root
 webdav.repository.password=root
 
 ##
-## JCR
+## JCR & Jackrabbit
 ##
 
 jcr.workspace.name=sitescape
 jcr.node.documentlibrary=documentlibrary
 
-jcr.jackrabbit.repository.root=/home/liferay/jackrabbit
-jcr.jackrabbit.config.file.path=${jcr.jackrabbit.repository.root}/repository.xml
-jcr.jackrabbit.repository.home=${jcr.jackrabbit.repository.root}/home
-jcr.jackrabbit.credentials.username=none
-jcr.jackrabbit.credentials.password=none
+##
+## Jackrabbit repository
+##
+
+
+
+jackrabbit.repository.root=/home/liferay/jackrabbit
+jackrabbit.config.file.path=${jcr.jackrabbit.repository.root}/repository.xml
+jackrabbit.repository.home=${jcr.jackrabbit.repository.root}/home
+jackrabbit.credentials.username=none
+jackrabbit.credentials.password=none
 
 ##
 ## Web/Portal Authentication
