Remove version numbers from the archives; Also remove unnecessary generation of class-path entry for MANIFEST.

--- a/ssf/main/build.xml
+++ b/ssf/main/build.xml
@@ -32,9 +32,10 @@
 			basedir="${classes.dir}"
 			jarfile="${jar.file}"
 		>
+			<!-- No longer necessary
 			<manifest>
 				<attribute name="Class-Path" value="${classpath.manifest.ss} ${classpath.manifest.3rd}" />
-			</manifest>
+			</manifest>-->
 		</jar>
 	</target>
 
