dashboard as portlets

--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -130,9 +130,9 @@ dashboard.components.narrowVariable=workspaceTree, favorites, html, iframe
 # The following variables can be set by customers. 
 # Values found in these variables will be appended to the factory default lists above.
 # Put the new values in ssf-ext.properties (instead of editing this file).
-custom.dashboard.components.wide=folder, search, html, iframe
-custom.dashboard.components.narrowFixed=html, iframe
-custom.dashboard.components.narrowVariable=favorites, html, iframe
+custom.dashboard.components.wide=
+custom.dashboard.components.narrowFixed=
+custom.dashboard.components.narrowVariable=
 
 # Dashboard width for the "narrow fixed" region
 dashboard.size.narrowFixedWidth=250
