--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -73,23 +73,10 @@ webdav.repository.username=root
 webdav.repository.password=root
 
 ##
-## JCR & Jackrabbit
+## JCR
 ##
 
 jcr.workspace.name=sitescape
-jcr.node.documentlibrary=documentlibrary
-
-##
-## Jackrabbit repository
-##
-
-
-
-jackrabbit.repository.root=/home/liferay/jackrabbit
-jackrabbit.config.file.path=${jcr.jackrabbit.repository.root}/repository.xml
-jackrabbit.repository.home=${jcr.jackrabbit.repository.root}/home
-jackrabbit.credentials.username=none
-jackrabbit.credentials.password=none
 
 ##
 ## Web/Portal Authentication
