File extension checking must be done case insensitively for enabling edit-and-save-place.

--- a/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -150,9 +150,10 @@ dashboard.configJsp.iframe=/WEB-INF/jsp/dashboard/iframe_config.jsp
 dashboard.title.iframe=__dashboard.iframe
 
 ##
-## File extensions that support edit-in-place via WebDAV
+## File extensions that support edit-in-place via WebDAV 
 ##
 
+# File extension matching is performed case insensitively. 
 edit.in.place.file.extensions=.doc,.ppt,.xsl
 
 ##
