--- a/ssf/build.xml
+++ b/ssf/build.xml
@@ -250,6 +250,7 @@ app.server.liferay.jboss-tomcat.dir=${temp.dir.path}
 		<!--<antcall target="java2html" />-->
 		<antcall target="javadoc-combined" />
 		<antcall target="liferay-tomcat-bundle" />
+		<antcall target="liferay-jboss-tomcat-bundle" />
 		<antcall target="zip" />
 	</target>
 
