Include portal's version number in the bundled kit

--- a/ssf/build.xml
+++ b/ssf/build.xml
@@ -210,8 +210,8 @@ app.server.liferay.tomcat.dir=${temp.dir.path}
 		</echo>
 		<ant dir="liferay" target="full-deploy" inheritAll="false" />
 		<mkdir dir="${dist.dir}" />
-		<delete file="${dist.dir}/sitescape-forum-${forum.version}-liferay-tomcat.zip" failonerror="false" />
-		<zip destfile="${dist.dir}/sitescape-forum-${forum.version}-liferay-tomcat.zip"
+		<delete file="${dist.dir}/sitescape-forum-${forum.version}-liferay-tomcat-${liferay.version}.zip" failonerror="false" />
+		<zip destfile="${dist.dir}/sitescape-forum-${forum.version}-liferay-tomcat-${liferay.version}.zip"
 			basedir="${temp.dir}" />
 		<move file="app.server.${user.name}.properties.moved" tofile="app.server.${user.name}.properties" failonerror="false"/>		
 	</target>
@@ -227,8 +227,8 @@ app.server.liferay.jboss-tomcat.dir=${temp.dir.path}
 		</echo>
 		<ant dir="liferay" target="full-deploy" inheritAll="false" />
 		<mkdir dir="${dist.dir}" />
-		<delete file="${dist.dir}/sitescape-forum-${forum.version}-liferay-jboss-tomcat.zip" failonerror="false" />
-		<zip destfile="${dist.dir}/sitescape-forum-${forum.version}-liferay-jboss-tomcat.zip"
+		<delete file="${dist.dir}/sitescape-forum-${forum.version}-liferay-jboss-tomcat-${liferay.version}.zip" failonerror="false" />
+		<zip destfile="${dist.dir}/sitescape-forum-${forum.version}-liferay-jboss-tomcat-${liferay.version}.zip"
 			basedir="${temp.dir}" />
 		<move file="app.server.${user.name}.properties.moved" tofile="app.server.${user.name}.properties" failonerror="false"/>		
 	</target>
