--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -110,9 +110,9 @@ custom.icons.entry=
 ## Dashboard components
 ## Define the dashboard components and the jsps needed to view and configure them.
 ##
-dashboard.components.wide=folder, search, workspaceTree, html, iframe
-dashboard.components.narrowFixed=workspaceTree, html, iframe
-dashboard.components.narrowVariable=workspaceTree, favorites, html, iframe
+dashboard.components.wide=folder, search, workspaceTree, html, iframe, buddyList
+dashboard.components.narrowFixed=workspaceTree, html, iframe, buddyList
+dashboard.components.narrowVariable=workspaceTree, favorites, html, iframe, buddyList
 
 # The following variables can be set by customers. 
 # Values found in these variables will be appended to the factory default lists above.
@@ -148,6 +148,10 @@ dashboard.title.html=__dashboard.html
 dashboard.viewJsp.iframe=/WEB-INF/jsp/dashboard/iframe_view.jsp
 dashboard.configJsp.iframe=/WEB-INF/jsp/dashboard/iframe_config.jsp
 dashboard.title.iframe=__dashboard.iframe
+
+dashboard.viewJsp.buddyList=/WEB-INF/jsp/dashboard/buddy_list_view.jsp
+dashboard.configJsp.buddyList=/WEB-INF/jsp/dashboard/buddy_list_config.jsp
+dashboard.title.buddyList=__dashboard.buddyList
 
 ##
 ## File extensions that support edit-in-place via WebDAV 
