--- a/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
+++ b/trunk/ssf/web/docroot/WEB-INF/classes/config/ssf.properties
@@ -95,8 +95,10 @@ portal.password.auto.synchronize=true
 ##
 icons.workspace=/icons/workspace.gif
 icons.folder=/icons/folder.png, /icons/disc_folder1.png, /icons/disc_folder2.png, /icons/file_folder.png, /icons/box.png, /icons/bricks.png, /icons/basket.png, /icons/calendar.png, /icons/calendar2.png
+icons.filefolder=/icons/folder.png, /icons/disc_folder1.png, /icons/disc_folder2.png, /icons/file_folder.png, /icons/box.png, /icons/bricks.png, /icons/basket.png, /icons/calendar.png, /icons/calendar2.png
 icons.profileList=/icons/profile_list.png
 icons.entry=/icons/page.png, /icons/table.png, /icons/script.png, /icons/vcard.png, /icons/note_edit.png, /icons/lightning.png, /icons/chart_bar.png, /icons/chart_curve.png, /icons/chart_pie.png
+icons.fileentry=/icons/page.png, /icons/table.png, /icons/script.png, /icons/vcard.png, /icons/note_edit.png, /icons/lightning.png, /icons/chart_bar.png, /icons/chart_curve.png, /icons/chart_pie.png
 
 # The following variables can be set by customers. 
 # Values found in these variables will be appended to the factory default lists above.
